test/test_suite/errors/printing_errors.c3t
// #target: macos-x64
module test;
import std::io;

fault Cde
{
	HELLO,
	WORLD,
}
fn void main()
{
	anyerr x = Cde.WORLD;
	io::printf("%s %s\n", Cde.HELLO.nameof, x.nameof);
}

/* #expect: test.ll

define void @test_main() #0 {
entry:
  %x = alloca i64, align 8
  %retparam = alloca i64, align 8
  %varargslots = alloca [2 x %variant], align 16
  %taddr = alloca [5 x i8]*, align 8
  %faultname_zero = alloca %"char[]", align 8
  %taddr1 = alloca %"variant[]", align 8
  store i64 ptrtoint (%.fault* @"test_Cde$WORLD" to i64), i64* %x, align 8
  store [5 x i8]* bitcast ([6 x i8]* @.str.2 to [5 x i8]*), [5 x i8]** %taddr, align 8
  %0 = bitcast [5 x i8]** %taddr to i8*
  %1 = insertvalue %variant undef, i8* %0, 0
  %2 = insertvalue %variant %1, i64 ptrtoint (%.introspect* @"ct$p$a5$char" to i64), 1
  %3 = getelementptr inbounds [2 x %variant], [2 x %variant]* %varargslots, i64 0, i64 0
  store %variant %2, %variant* %3, align 16
  %4 = load i64, i64* %x, align 8
  %eq = icmp eq i64 %4, 0
  br i1 %eq, label %faultname_no, label %faultname_ok

faultname_no:                                     ; preds = %entry
  %5 = bitcast %"char[]"* %faultname_zero to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %5, i8 0, i64 16, i1 false)
  br label %faultname_exit

faultname_ok:                                     ; preds = %entry
  %6 = inttoptr i64 %4 to %.fault*
  %7 = getelementptr inbounds %.fault, %.fault* %6, i32 0, i32 1
  br label %faultname_exit

faultname_exit:                                   ; preds = %faultname_ok, %faultname_no
  %faultname = phi %"char[]"* [ %faultname_zero, %faultname_no ], [ %7, %faultname_ok ]
  %8 = bitcast %"char[]"* %faultname to i8*
  %9 = insertvalue %variant undef, i8* %8, 0
  %10 = insertvalue %variant %9, i64 ptrtoint (%.introspect* @"ct$sa$char" to i64), 1
  %11 = getelementptr inbounds [2 x %variant], [2 x %variant]* %varargslots, i64 0, i64 1
  store %variant %10, %variant* %11, align 16
  %12 = bitcast [2 x %variant]* %varargslots to %variant*
  %13 = insertvalue %"variant[]" undef, %variant* %12, 0
  %14 = insertvalue %"variant[]" %13, i64 2, 1
  store %"variant[]" %14, %"variant[]"* %taddr1, align 8
  %15 = bitcast %"variant[]"* %taddr1 to { i8*, i64 }*
  %16 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %15, i32 0, i32 0
  %lo = load i8*, i8** %16, align 8
  %17 = getelementptr inbounds { i8*, i64 }, { i8*, i64 }* %15, i32 0, i32 1
  %hi = load i64, i64* %17, align 8
  %18 = call i64 @std_io_printf(i64* %retparam, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i32 0, i32 0), i64 6, i8* %lo, i64 %hi)
  %not_err = icmp eq i64 %18, 0
  br i1 %not_err, label %after_check, label %voiderr

after_check:                                      ; preds = %faultname_exit
  br label %voiderr

voiderr:                                          ; preds = %after_check, %faultname_exit
  ret void
}
